--- a/oefening.html
+++ b/oefening.html
@@ -5367,6 +5367,180 @@
                 correctAnswer: "gepoetst",
                 uitgang: null,
                 explanation: "Voltooid deelwoord: ge- + stam 'poets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+
+            // VISSEN (4 zinnen)
+            {
+                sentence: "Ik heb de hele dag [...]",
+                werkwoord: "vissen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "gevist",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'vis' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt op een goede plek [...]",
+                werkwoord: "vissen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "gevist",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'vis' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Mijn opa heeft vroeger commercieel [...]",
+                werkwoord: "vissen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "gevist",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'vis' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben in het kanaal [...]",
+                werkwoord: "vissen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "gevist",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'vis' + t (s zit in 't ex-fokschaap → 't').",
+            },
+
+            // WERKEN (4 zinnen)
+            {
+                sentence: "Ik heb de hele nacht [...]",
+                werkwoord: "werken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "gewerkt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'werk' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt altijd hard [...]",
+                werkwoord: "werken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "gewerkt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'werk' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Zij heeft jarenlang in het onderwijs [...]",
+                werkwoord: "werken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "gewerkt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'werk' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben goed samen [...]",
+                werkwoord: "werken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "gewerkt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'werk' + t (k zit in 't ex-fokschaap → 't').",
+            },
+
+            // STOPPEN (4 zinnen)
+            {
+                sentence: "Ik ben met roken [...]",
+                werkwoord: "stoppen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "gestopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'stop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij bent te vroeg [...]",
+                werkwoord: "stoppen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "gestopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'stop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De trein is bij het station [...]",
+                werkwoord: "stoppen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "gestopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'stop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie zijn precies op tijd [...]",
+                werkwoord: "stoppen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "gestopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'stop' + t (p zit in 't ex-fokschaap → 't').",
             }
         ];
 
