--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
         }
 
         @media (min-width: 1025px) {
-            /* Desktop/PC - minimal top space */
+            /* Desktop/PC - minimal top space and reduced height */
             body {
                 padding: 5px 20px;
+                min-height: 80vh;
             }
         }
 
