--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
             justify-content: center;
         }
 
-        @media (min-width: 768px) and (max-width: 1024px) {
-            /* iPad - more vertical space */
+        @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+            /* iPad Portrait - moderate space */
             body {
-                padding: 35px 20px;
+                padding: 20px;
+            }
+        }
+
+        @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+            /* iPad Landscape - more vertical space */
+            body {
+                padding: 40px 20px;
             }
         }
 
