--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
             /* iPad Portrait - moderate space */
             body {
-                padding: 20px;
+                padding: 20px !important;
             }
         }
 
-        @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+        @media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
             /* iPad Landscape - more vertical space */
             body {
-                padding: 120px 20px;
+                padding: 120px 20px !important;
             }
         }
 
