--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>'t Kofschip Oefenen</title>
+    <title>'t ex-kofschip Oefenen</title>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -327,7 +327,7 @@
     <div class="container">
         <div class="header">
             <div class="app-icon">✨</div>
-            <h1>'t Kofschip Oefenen</h1>
+            <h1>'t ex-kofschip Oefenen</h1>
             <p class="subtitle">Leer stap voor stap de juiste werkwoordsvorm te kiezen!</p>
         </div>
 
