--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
 </head>
 <body>
     <div class="container">
+        <div style="margin-bottom:10px;">
+            <a href="https://bertmarinus.github.io/learnforge/" style="display:inline-flex;align-items:center;gap:8px;color:#718096;text-decoration:none;font-size:15px;font-weight:600;transition:color 0.3s;" onmouseover="this.style.color='#667eea'" onmouseout="this.style.color='#718096'">🏠 Hoofdmenu</a>
+        </div>
         <div class="header">
             <div class="app-icon">✨</div>
             <h1>'t ex-kofschip Oefenen</h1>
