--- a/oefening.html
+++ b/oefening.html
@@ -763,9 +763,10 @@
 </head>
 <body>
     <div class="container">
-        <a href="index.html" class="back-link">
-            <span>←</span> Terug naar overzicht
-        </a>
+        <div style="display:flex; gap:16px; margin-bottom:20px; flex-wrap:wrap;">
+            <a href="https://bertmarinus.github.io/learnforge/" class="back-link">🏠 Hoofdmenu</a>
+            <a href="index.html" class="back-link">← Terug naar overzicht</a>
+        </div>
 
         <!-- Progress Bar -->
         <div class="progress-section">
