--- a/oefening.html
+++ b/oefening.html
@@ -763,9 +763,9 @@
 </head>
 <body>
     <div class="container">
-        <div style="display:flex; gap:16px; margin-bottom:20px; flex-wrap:wrap;">
-            <a href="https://bertmarinus.github.io/learnforge/" class="back-link">🏠 Hoofdmenu</a>
-            <a href="index.html" class="back-link">← Terug naar overzicht</a>
+        <div style="display:flex; gap:16px; margin-bottom:20px; flex-wrap:wrap; align-items:center;">
+            <a href="https://bertmarinus.github.io/learnforge/" class="back-link" style="margin-bottom:0;">🏠 Hoofdmenu</a>
+            <a href="index.html" class="back-link" style="margin-bottom:0;">← Terug naar overzicht</a>
         </div>
 
         <!-- Progress Bar -->
