--- a/index.html
+++ b/index.html
@@ -27,32 +27,11 @@
             font-family: 'Nunito', -apple-system, BlinkMacSystemFont, sans-serif;
             background: linear-gradient(135deg, #e0e7ff 0%, #fce7f3 50%, #dbeafe 100%);
             min-height: 100vh;
-            padding: 5px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            padding: 20px;
         }
 
-        @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
-            /* iPad Portrait - moderate space */
-            body {
-                padding: 20px !important;
-            }
-        }
-
-        @media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
-            /* iPad Landscape - more vertical space */
-            body {
-                padding: 40px 20px !important;
-            }
-        }
-
-        @media (min-width: 1025px) {
-            /* Desktop/PC - minimal top space and reduced height */
-            body {
-                padding: 5px 20px;
-                min-height: 80vh;
-            }
+        @media (max-width: 768px) {
+            body { padding: 15px; }
         }
 
         .container {
@@ -63,7 +42,7 @@
 
         .header {
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             animation: fadeInDown 0.6s ease;
         }
 
@@ -76,7 +55,7 @@
             align-items: center;
             justify-content: center;
             font-size: 40px;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
             box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
             animation: float 3s ease-in-out infinite;
         }
